[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/environment/ghosts_respawn/ghosts_respawn.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 82.8408, 534.879, 0, 0, 0, 0, 80.0122, 56.8749, 0, 0, 0, 0, 948.339, 56.8749, 0, 0, 0, 0, 951.168, 543.364, 0, 0, 0, 0, 94.1543, 546.193 )
}

[node name="phantoms_respawn" type="Node2D"]
script = ExtResource( 1 )

[node name="path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="path_follow" type="PathFollow2D" parent="path"]
position = Vector2( 82.8408, 534.879 )
rotation = -1.57671

[node name="cooldown_timer" type="Timer" parent="."]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
